# opengl_learning

./: .gitmodules  README.md
openglsteps/otherlib/src/: glad.c
openglsteps/projection/: CMakeLists.txt  Makefile  perspective.cpp
openglsteps/projection/shaders/: perspective.vs
openglsteps/texture/: CMakeLists.txt  Makefile  texture1.cpp  texture2.cpp
openglsteps/texture/shaders/: texture1.fs  texture1.vs  texture2.fs  texture2.vs
openglsteps/transformation/: CMakeLists.txt  Makefile  compileshader.h  main.cpp  movetex.cpp  rotatetex.cpp  stb_image.cpp
openglsteps/transformation/shaders/: movetex.vs  rotatetex.fs  rotatetex.vs
openglsteps/triangles/: CMakeLists.txt  Makefile  square.cpp  triangle1.cpp  triangle2.cpp
openglsteps/triangles/shaders/: square.fs  square.vs  triangle1.fs  triangle1.vs  triangle2.fs  triangle2.vs
sdl/basics/: line.cpp  randomshape.cpp  square.cpp  triangle.cpp
sdl/basics/glad/: glad.h
