cmake_minimum_required(VERSION 3.27.1)

include_directories(../otherlib/)
include_directories(../otherlib/glad)
include_directories(./shaders)
project(triangle1 )
configure_file(shaders/triangle1.vs shaders/triangle1.fs COPYONLY)
add_executable(triangle1 triangle1.cpp ../otherlib/src/glad.c  )
target_link_libraries(triangle1 SDL2 dl)
project(triangle2)
add_executable(triangle2 triangle2.cpp ../otherlib/src/glad.c)
target_link_libraries(triangle2 SDL2 dl)
project(square)
add_executable(square square.cpp ../otherlib/src/glad.c)
target_link_libraries(square SDL2 dl)
